--- a/Fintrack/Components/Layout/NavMenu.razor
+++ b/Fintrack/Components/Layout/NavMenu.razor
@@ -23,5 +23,10 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Manage Transactions
             </NavLink>
         </div>
+        <div class="nav-item px-3 mt-3">
+            <NavLink class="nav-link text-danger" href="/login">
+                <span class="bi bi-box-arrow-right" aria-hidden="true"></span> Log Out
+            </NavLink>
+        </div>
     </nav>
 </div>
